--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,6 +4,7 @@ COPY . /app
 WORKDIR /app
 
 RUN python3 -m venv /opt/venv
+RUN apk add postgresql-client build-base postgresql-dev
 
 RUN /opt/venv/bin/pip install pip --upgrade && \
     /opt/venv/bin/pip install -r requirements.txt && \
